Creation of a repository for the unsolved PR Lab 0 & Lab 1

--- a/Lab0_compounding.ipynb
+++ b/Lab0_compounding.ipynb
@@ -27,7 +27,7 @@
     "which can be graphycally represented as follows:\n",
     "\n",
     "<center>\n",
-    "<img src=\"./Compounding.png\" \n",
+    "<img src=\"./img/Compounding.png\"\n",
     "     width=\"500\" />\n",
     "\n",
     "    Compounding Operation\n",
@@ -141,7 +141,7 @@
     "as well as the inverse compounding ($\\ominus$):\n",
     "\n",
     "<center>\n",
-    "<img src=\"./InverseCompounding.png\" \n",
+    "<img src=\"./img/InverseCompounding.png\"\n",
     "     width=\"400\" />\n",
     "\n",
     "    Inverse Compounding Operation\n",
